--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,6 +11,8 @@
       <a href="/">Home</a>
       <a href="/auth/signup">Signup</a>
       <a href="/auth/login">Login</a>
+       <a href="/meals">See meals</a>
+        <a href="/meals/create">Create a recipe</a>
 
       <form action="/auth/logout" method="get">
         <button type="submit">Logout</button>
