--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,30 +1,23 @@
 {{! views/auth/signup.hbs }}
+<div>
+    <h2>Signup</h2>
+    <form action="/auth/signup" method="POST">
 
-<div id="form">
-  <h2>Signup</h2>
-  <form action="/auth/signup" method="POST">
+        <label for="fullName">Full Name</label>
+        <input id="fullName" type="text" name="fullName" />
 
-    <label>
-      Username
-      <input type="text" name="username" placeholder="ironhacker" />
-    </label>
 
-    <label>
-      Email
-      <input type="text" name="email" placeholder="rockstar@ironhack.com" />
-    </label>
+        <label for="email">Email</label>
+        <input id="email" type="text" name="email" />
 
-    <label>
-      Password
-      <input type="password" name="password" placeholder="********" />
-    </label>
+        <label for="password">Password</label>
+        <input id="password" type="password" name="password" />
 
-    <button type="submit">Create account</button>
 
-    {{! error message will be added here }}
+        <button type="submit">Signup</button>
 
-    {{#if errorMessage}}
-      <p class="error">{{errorMessage}}</p>
-    {{/if}}
-  </form>
+        {{#if errorMessage}}
+        <p>{{errorMessage}}</p>
+        {{/if}}
+    </form>
 </div>
