--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,3 +15,33 @@ img {
 .titleHP{
   color: rgb(88, 57, 10);
 }
+
+
+#signup {
+  margin: 50px auto;
+  width: 400px;
+}
+
+#signup form {
+  color: rgb(190, 243, 185);
+  font-size: large;
+  margin: auto;
+  padding: 30px;
+  border-radius: 50px;
+  background: #6e9756;
+}
+.input{
+  background-color: #b3dab1;
+  border-radius:10px;
+  color: #000000;
+  margin-bottom: 1em;
+  padding: 0 16px;
+  width: 90%;
+  outline: 0;
+  height: 50px;
+}
+.buton{
+  background-color: rgb(184, 187, 42);
+  font-size: large;
+  width: 100px;
+}
